--- a/app/src/main/res/drawable/shape_menuiconbg.xml
+++ b/app/src/main/res/drawable/shape_menuiconbg.xml
@@ -3,6 +3,6 @@
     android:shape="oval">
 
     <solid
-        android:color="?attr/colorAccent"/>
+        android:color="?attr/colorMenuIconBack"/>
 
 </shape>
