--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -137,7 +137,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginRight="10dp"
-            android:background="@drawable/icon_search"
+            android:background="@drawable/ic_search"
             android:clickable="true" />
     </LinearLayout>
 
