--- a/app/src/main/res/layout/item_article_card_shop.xml
+++ b/app/src/main/res/layout/item_article_card_shop.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingLeft="24dp"
@@ -46,8 +47,9 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:lines="2"
-                    android:textColor="@color/gray_44"
-                    android:textSize="13sp" />
+                    android:textColor="?attr/colorTitle"
+                    android:textSize="13sp"
+                    tools:text="衬衫" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -63,7 +65,8 @@
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:lines="2"
-                        android:textSize="12sp" />
+                        android:textSize="12sp"
+                        tools:text="这件衬衫的价格是多少" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -79,7 +82,7 @@
                             android:paddingStart="3dp"
                             android:paddingEnd="3dp"
                             android:text="商品"
-                            android:textColor="@color/mainColor"
+                            android:textColor="?attr/colorAccent"
                             android:textSize="11sp" />
 
                         <TextView
@@ -87,8 +90,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
-                            android:textColor="@color/mainColor"
-                            android:textSize="16sp" />
+                            android:textColor="?attr/colorAccent"
+                            android:textSize="16sp"
+                            tools:text="9.15￥" />
                     </LinearLayout>
                 </LinearLayout>
             </RelativeLayout>
