--- a/app/src/main/res/layout/item_list_bangumi.xml
+++ b/app/src/main/res/layout/item_list_bangumi.xml
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textColor="@color/gray_44"
+            android:textColor="?attr/colorTitle"
             android:textSize="13sp" />
 
         <LinearLayout
