--- a/app/src/main/res/drawable/layer_bg_user_card.xml
+++ b/app/src/main/res/drawable/layer_bg_user_card.xml
@@ -3,7 +3,7 @@
     <item android:right="4dp"
         android:bottom="4dp">
         <shape android:shape="rectangle">
-            <solid android:color="#888888" />
+            <solid android:color="?attr/colorLayerBack" />
             <corners android:radius="2dp" />
         </shape>
     </item>
