--- a/app/src/main/res/drawable/shape_bg_article_card_identity.xml
+++ b/app/src/main/res/drawable/shape_bg_article_card_identity.xml
@@ -4,5 +4,5 @@
     <corners android:radius="3dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/mainColor" />
+        android:color="?attr/colorAccent" />
 </shape>
