--- a/app/src/main/res/drawable/shape_lvbg_fme.xml
+++ b/app/src/main/res/drawable/shape_lvbg_fme.xml
@@ -4,5 +4,5 @@
     <corners android:radius="2dp" />
     <stroke
         android:width="1dp"
-        android:color="#555555" />
+        android:color="?attr/colorAccent" />
 </shape>
