--- a/app/src/main/res/layout/activity_followme.xml
+++ b/app/src/main/res/layout/activity_followme.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -61,6 +62,7 @@
                 android:layout_marginTop="7dp"
                 android:clickable="true"
                 android:descendantFocusability="blocksDescendants"
+                app:cardBackgroundColor="?attr/colorLayerBack"
                 app:cardCornerRadius="4dp"
                 app:cardElevation="6dp">
 
@@ -82,7 +84,7 @@
                         android:layout_margin="6dp"
                         android:layout_toRightOf="@+id/fme_card_head"
                         android:text="luern0313"
-                        android:textColor="@color/mainColor"
+                        android:textColor="?attr/colorAccent"
                         android:textStyle="bold" />
 
                     <TextView
@@ -98,7 +100,7 @@
                         android:paddingRight="4dp"
                         android:paddingTop="1dp"
                         android:text="LV6"
-                        android:textColor="@color/gray_44"
+                        android:textColor="?attr/colorAccent"
                         android:textSize="8sp" />
 
                     <TextView
@@ -110,8 +112,9 @@
                         android:layout_marginTop="-1dp"
                         android:layout_toRightOf="@+id/fme_card_lv"
                         android:text=""
-                        android:textColor="@color/gray_44"
-                        android:textSize="10sp" />
+                        android:textColor="?attr/colorTitle"
+                        android:textSize="10sp"
+                        tools:text="123" />
 
                     <TextView
                         android:id="@+id/fme_card_button"
