--- a/app/src/main/res/layout/activity_theme.xml
+++ b/app/src/main/res/layout/activity_theme.xml
@@ -43,6 +43,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:background="?android:attr/colorBackground"
         android:id="@+id/theme_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
