--- a/app/src/main/res/layout/item_aniremind.xml
+++ b/app/src/main/res/layout/item_aniremind.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/anre_lay"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -57,8 +58,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/anre_isfollow"
         android:layout_toRightOf="@+id/anre_imgc"
-        android:textColor="@color/mainColor"
-        android:textSize="11sp" />
+        android:textColor="?attr/colorAccent"
+        android:textSize="11sp"
+        tools:text="12:00" />
 
     <TextView
         android:id="@+id/anre_time"
