--- a/app/src/main/res/layout/item_article_card_music.xml
+++ b/app/src/main/res/layout/item_article_card_music.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingLeft="24dp"
@@ -11,6 +12,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="58dp"
+        app:cardBackgroundColor="?attr/colorLayerBack"
         app:cardCornerRadius="6dp"
         app:cardElevation="0dp">
 
@@ -19,8 +21,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="?android:attr/selectableItemBackground"
-            android:descendantFocusability="blocksDescendants"
             android:clickable="true"
+            android:descendantFocusability="blocksDescendants"
             android:focusable="true"
             android:gravity="center_vertical">
 
@@ -46,8 +48,9 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:lines="1"
-                    android:textColor="@color/gray_44"
-                    android:textSize="13sp" />
+                    android:textColor="?attr/colorTitle"
+                    android:textSize="13sp"
+                    tools:text="宇宙分解" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -66,7 +69,8 @@
                             android:layout_height="wrap_content"
                             android:ellipsize="end"
                             android:maxLines="1"
-                            android:textSize="12sp" />
+                            android:textSize="12sp"
+                            tools:text="12" />
 
                         <TextView
                             android:id="@+id/artcard_music_reply"
@@ -75,7 +79,8 @@
                             android:layout_marginStart="4dp"
                             android:ellipsize="end"
                             android:maxLines="1"
-                            android:textSize="12sp" />
+                            android:textSize="12sp"
+                            tools:text="34" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -92,7 +97,7 @@
                             android:paddingStart="3dp"
                             android:paddingEnd="3dp"
                             android:text="音乐"
-                            android:textColor="@color/mainColor"
+                            android:textColor="?attr/colorAccent"
                             android:textSize="11sp" />
 
                         <TextView
