--- a/app/src/main/res/layout/item_dynamic.xml
+++ b/app/src/main/res/layout/item_dynamic.xml
@@ -29,7 +29,7 @@
             android:layout_marginEnd="4dp"
             android:src="@drawable/img_default_head" />
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/item_dynamic_off_1"
             android:layout_width="15dp"
             android:layout_height="15dp"
@@ -38,7 +38,7 @@
             android:layout_marginEnd="-2dp"
             android:src="@drawable/icon_ou_ver_1" />
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/item_dynamic_off_2"
             android:layout_width="15dp"
             android:layout_height="15dp"
@@ -60,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:textColor="@color/black"
+                android:textColor="?attr/colorTitle"
                 android:textStyle="bold" />
 
             <TextView
