--- a/app/src/main/res/layout/item_favor_box.xml
+++ b/app/src/main/res/layout/item_favor_box.xml
@@ -63,7 +63,7 @@
             android:layout_marginBottom="6dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textColor="@color/gray_44" />
+            android:textColor="?attr/colorTitle" />
 
         <LinearLayout
             android:layout_width="match_parent"
