--- a/app/src/main/res/layout/item_search_video.xml
+++ b/app/src/main/res/layout/item_search_video.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_search_video_lay"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -31,7 +32,8 @@
         android:gravity="end"
         android:paddingRight="2dp"
         android:textColor="@color/white"
-        android:textSize="10sp" />
+        android:textSize="10sp"
+        tools:text="4:42" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,14 +49,16 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textColor="@color/gray_44"
-            android:textSize="13sp" />
+            android:textColor="?attr/colorTitle"
+            android:textSize="13sp"
+            tools:text="标题" />
 
         <TextView
             android:id="@+id/item_search_video_up"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="10sp" />
+            android:textSize="10sp"
+            tools:text="UP主" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -67,7 +71,8 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:textSize="10sp" />
+                android:textSize="10sp"
+                tools:text="6.8万" />
 
             <TextView
                 android:id="@+id/item_search_video_danmaku"
@@ -76,7 +81,8 @@
                 android:layout_marginLeft="4dp"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:textSize="10sp" />
+                android:textSize="10sp"
+                tools:text="848" />
         </LinearLayout>
 
     </LinearLayout>
