--- a/app/src/main/res/layout/item_setting_item.xml
+++ b/app/src/main/res/layout/item_setting_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
@@ -11,8 +12,9 @@
         android:id="@+id/si_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="14dp"
         android:paddingBottom="14dp"
-        android:paddingTop="14dp" />
+        tools:text="设置条目" />
 
     <TextView
         android:id="@+id/si_redpoint"
