--- a/app/src/main/res/layout/widget_article_header.xml
+++ b/app/src/main/res/layout/widget_article_header.xml
@@ -12,7 +12,7 @@
         android:layout_marginLeft="25dp"
         android:layout_marginTop="8dp"
         android:layout_marginRight="25dp"
-        android:textColor="@color/gray_44"
+        android:textColor="?attr/colorTitle"
         android:textStyle="bold" />
 
     <cn.luern0313.wristbilibili.widget.AutoLineLayout
@@ -282,8 +282,8 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:textColor="@color/gray_44"
-                android:textStyle="bold"/>
+                android:textColor="?attr/colorTitle"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/article_card_sen"
@@ -292,8 +292,8 @@
                 android:layout_marginTop="3dp"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:textColor="@color/gray_44"
-                android:textSize="11sp"/>
+                android:textColor="?attr/colorTitle"
+                android:textSize="11sp" />
         </LinearLayout>
 
     </RelativeLayout>
