--- a/app/src/main/res/layout/widget_dynamic_favor.xml
+++ b/app/src/main/res/layout/widget_dynamic_favor.xml
@@ -35,10 +35,11 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/dynamic_favor_author"
         android:layout_marginStart="18dp"
         android:layout_marginEnd="18dp"
-        app:cardElevation="0dp"
-        android:layout_below="@+id/dynamic_favor_author">
+        app:cardBackgroundColor="?attr/colorLayerBack"
+        app:cardElevation="0dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -69,7 +70,7 @@
                     android:layout_marginBottom="2dp"
                     android:ellipsize="end"
                     android:lines="2"
-                    android:textColor="@android:color/black"
+                    android:textColor="?attr/colorTitle"
                     android:textSize="12sp" />
 
                 <LinearLayout
