--- a/app/src/main/res/layout/widget_dynamic_live.xml
+++ b/app/src/main/res/layout/widget_dynamic_live.xml
@@ -115,7 +115,7 @@
         android:layout_below="@+id/dynamic_live_img_lay"
         android:layout_marginStart="18dp"
         android:layout_marginEnd="18dp"
-        android:textSize="13sp"
-        android:textColor="@color/gray_22"/>
+        android:textColor="?attr/colorTitle"
+        android:textSize="13sp" />
 
 </RelativeLayout>
